WMG112519/force-app/main/default/objects/Historic_Mars_Meeting_Attendee__c/Historic_Mars_Meeting_Attendee__c.object-meta.xml
<CustomObject>
    <label>Historic Mars Meeting Attendee</label>
    <nameField>
        <displayFormat>HMMA-{000000}</displayFormat>
        <label>Historic Mars Meeting Attendee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historic Mars Meeting Attendees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>