WMG112519/force-app/main/default/objects/Historic_Mars_Meeting_Attendee__c/fields/Attendee_Old__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Old__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AttendeeOld</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Historic Mars Meeting Attendees</relationshipLabel>
    <relationshipName>Historic_Mars_Meeting_Attendees1</relationshipName>
    <type>Lookup</type>
</CustomField>