WMG112519/force-app/main/default/objects/Historic_Mars_Meeting_Attendee__c/fields/Historical_Mars_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Historical_Mars_Meeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Historical Mars Meeting</label>
    <referenceTo>Historical_Mars_Meeting__c</referenceTo>
    <relationshipLabel>Historic Mars Meeting Attendees</relationshipLabel>
    <relationshipName>Historic_Mars_Meeting_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>