WMG112519/force-app/main/default/objects/Historic_Mars_Meeting_Attendee__c/fields/Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Date__c</fullName>
    <formula>Historical_Mars_Meeting__r.Start__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting Date</label>
    <type>Date</type>
</CustomField>