WMG112519/force-app/main/default/objects/Historic_Mars_Meeting_Attendee__c/fields/subject__c.field-meta.xml
<CustomField>
    <fullName>subject__c</fullName>
    <formula>Historical_Mars_Meeting__r.Subject__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>subject</label>
    <type>Text</type>
</CustomField>