WMG112519/force-app/main/default/objects/Historic_Mars_Meeting_Attendee__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <formula>Historical_Mars_Meeting__r.Start__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time</label>
    <type>DateTime</type>
</CustomField>