WMG112519/force-app/main/default/objects/Historic_Mars_Meeting_Attendee__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <formula>Historical_Mars_Meeting__r.Meeting_Topic__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Topic</label>
    <type>Text</type>
</CustomField>