WMG112519/force-app/main/default/objects/Historic_Mars_Meeting_Attendee__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>TEXT( Historical_Mars_Meeting__r.Meeting_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>